# chat-enhanced

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  requirements-dev.txt  requirements.txt
backend/common/: jwt.py
backend/webapp/: Dockerfile  app.py  config.py  docker-entrypoint.sh  mails.py  requirements.txt
backend/webapp/alembic/: env.py
backend/webapp/alembic/versions/: c62ae404d00d_add_confirmation_table.py  c77fde48231a_add_users_table.py
backend/webapp/auth/domain/: dtos.py  enums.py  ports.py  service.py  users.py
backend/webapp/auth/domain/service/: confirm.py  login.py  register.py
backend/webapp/auth/infrastructure/: api.py  external.py  models.py  repository.py
backend/webapp/chat/: api.py
backend/webapp/database/: __init__.py
backend/webapp/tests/: conftest.py
backend/webapp/tests/integration/: test_auth_integration.py  test_endpoints.py
backend/webapp/tests/unit/: test_auth_service.py
backend/webapp/tests/unit/auth/: mock.py  test_login.py  test_register.py
backend/ws_server/: Dockerfile  README.md  nginx.conf  server.py
docs/: README.md
docs/modules/: backend.md  frontend.md  tooling.md
frontend/: Dockerfile  README-runtime-env.md  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json
frontend/chat-frontend/: package-lock.json  package.json
frontend/public/: env.js
frontend/src/: App.jsx  index.css
frontend/src/helpers/: api.js
frontend/src/views/: Chat.css  Chat.jsx  ConfirmRegistration.jsx  Login.jsx  SignIn.css  SignIn.jsx  SignUp.jsx
